--- a/Finnish/main/SoundRecorder.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SoundRecorder.apk/res/values-fi-rFI/strings.xml
@@ -52,8 +52,8 @@
   <string name="mark_point_list_title">Merkkauslista</string>
   <string name="menu">Valikko</string>
   <string name="message_file_size_error">Nauhoitus on saavuttanut %s tuetun maksimipituuden</string>
-  <string name="network_tip_dialog_cancel">Peruuta</string>
-  <string name="network_tip_dialog_content">Ääninauhuri tarvitsee internetyhteyden ja luvan lukea yhteystietojasi toimiakseen normaalisti. Hyväksytäänkö?</string>
+  <string name="network_tip_dialog_cancel">Älä hyväksy</string>
+  <string name="network_tip_dialog_content">Ääninauhuri tarvitsee internetyhteyden toimiakseen normaalisti. Hyväksytäänkö?</string>
   <string name="network_tip_dialog_ok">Hyväksyn</string>
   <string name="network_tip_dialog_title">Internet-yhteys vaaditaan</string>
   <string name="new_record_name">Uusi nauhoitus</string>
