--- a/Finnish/main/CloudBackup.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CloudBackup.apk/res/values-fi-rFI/strings.xml
@@ -48,10 +48,10 @@
   <string name="cloud_app_restore_wifi_prompt">Palauta Mi Pilven varmuuskopiosta.</string>
   <string name="cloud_back_up_date_format">HH:mm d.M.yyyy</string>
   <string name="cloud_back_up_detail_discription">"Nämä varmuuskopioidaan Mi Pilveen, kun laitteesi on yhdistettynä Wi-Fi verkkoon:
-*Sovellukset, Aloitusnäytön asettelu ja taustakuvat
-*Herätykset, kello, ja aika-asetukset
-*Ilmoituksien asetukset
-*MIUI ja järjestelmäasetukset
+*  Sovellukset, Aloitusnäytön asettelu ja taustakuvat
+*  Herätykset, kello, ja aika-asetukset
+*  Ilmoituksien asetukset
+*  MIUI ja järjestelmäasetukset
 Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Käytä sitä varten paikallista varmuuskopiointia."</string>
   <string name="cloud_back_up_frequence_choice_title">Varmuuskopion ajastus</string>
   <string name="cloud_back_up_frequence_long">Joka 7 päivä</string>
@@ -93,7 +93,6 @@ Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Kä
   <string name="desktop_wait_wifi">Odotetaan</string>
   <string name="desktop_waiting">Odotetaan</string>
   <string name="device_delete_prompt">Poistetaanko %s varmuuskopio?</string>
-  <string name="device_xiaomi">Mi Puhelin</string>
   <string name="dialog_btn_next">Seuraava</string>
   <string name="dialog_btn_restore_skip">Palauta myöhemmin</string>
   <string name="dialog_cancel_backup_cancel">Peruuta</string>
@@ -110,12 +109,19 @@ Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Kä
   <string name="download_meta_failed">Tietojen lataaminen epäonnistui.</string>
   <string name="download_settings">Ladataan Aloitusnäytön asetuksia %s%%</string>
   <string name="download_settings_fail">Aloitusnäytön asetuksien lataaminen epäonnistui</string>
+  <string name="error_num_placeholder">--</string>
+  <string name="error_retry_later">Epäonnistui, yritä myöhemmin uudelleen.</string>
   <string name="error_unknown">Jotain meni pieleen</string>
   <string name="get_device_id_error">Laitteen ID-numeron noutaminen epäonnistui</string>
   <string name="home_hint_global_launcher">Poco Aloitusnäyttö</string>
+  <string name="home_hint_other_launcher">Muu Aloitusnäyttö</string>
   <string name="home_restore_error">Aloitusnäytön palauttaminen epäonnistui</string>
   <string name="lack_of_storage">Tallennustilaa ei ole riittävästi</string>
   <string name="latest_backup_time_loading">Ladataan…</string>
+  <string name="load_backup_failed">Varmuuskopioiden lataaminen epäonnistui</string>
+  <string name="loading_progress_num">(%s%%)</string>
+  <string name="loading_user_backup">Ladataan käyttäjän varmuuskopioita…</string>
+  <string name="main_space">Ensimmäinen tila</string>
   <string name="managespace_delete_backup">Poista</string>
   <string name="menu_item_managespace">Hallitse tilaa</string>
   <string name="menu_item_sort">Järjestä</string>
@@ -124,7 +130,6 @@ Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Kä
   <string name="miui_device_name">Android</string>
   <string name="msg_alert_cancel_restore">Palautetaan kohteita. Lopetetaanko nyt?</string>
   <string name="msg_alert_restore_error">Kohteita ei voitu palauttaa Mi Pilvestä. Yritä uudelleen.</string>
-  <string name="name_model">Henkilön %1$s %2$s</string>
   <string name="network_error">Yhdistä verkkoon</string>
   <string name="no_account">Et ole kirjautuneena Mi Tiliin.</string>
   <string name="no_backup">Ei varmuuskopioita Mi Pilvessä.</string>
@@ -134,6 +139,8 @@ Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Kä
   <string name="open_wifi">Ota Wi-Fi käyttöön</string>
   <string name="open_wifi_description">Yhdistä Wi-Fi-verkkoon palauttaaksesi sovelluksen</string>
   <string name="open_wifi_setting">Wi-Fi asetukset</string>
+  <string name="pattern_backup_name_with_home">%1$s (%2$s%3$s: %4$s)</string>
+  <string name="pattern_backup_name_without_home">%1$s (%2$s%3$s)</string>
   <string name="process_whole_recovery">Palautetaan \"%s\"</string>
   <string name="provision_error_connect_msg">Testaa verkko ja yritä uudelleen. Varmuuskopiot ei ole käytettävissä, kun laitteesi on offline-tilassa.</string>
   <string name="provision_error_connect_title">Ei voi yhdistää</string>
@@ -160,8 +167,8 @@ Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Kä
   <string name="restore_task_in_process">Palautetaan…</string>
   <string name="restore_unfinished">Palautetaan, yritä myöhemmin uudelleen</string>
   <string name="retry">Yritä uudelleen</string>
-  <string name="self_phone">Tämä puhelin</string>
-  <string name="self_phone_home">Tämä puhelin: %s</string>
+  <string name="second_space">Toinen tila</string>
+  <string name="self_device">"Tämän puhelimen "</string>
   <string name="settings_backup">Järjestelmäasetukset</string>
   <string name="size_unknown">Tuntematon koko</string>
   <string name="start_backup_to_micloud">Varmuuskopioi sovellukset Mi Pilveen</string>
@@ -171,5 +178,7 @@ Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Kä
   <string name="title_alert_restore_error">Palauttaminen epäonnistui</string>
   <string name="total_space">Tilaa yhteensä: %s</string>
   <string name="try_again">Napauta yrittääksesi uudelleen</string>
+  <string name="try_continue">Napauta jatkaaksesi</string>
+  <string name="unsupported_home">Päivitä viimeisimpään käyttöjärjestelmään.</string>
   <string name="wait_icon_download">Ladataan sovelluksien kuvakkeita</string>
 </resources>
