--- a/Finnish/main/InCallUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/InCallUI.apk/res/values-fi-rFI/strings.xml
@@ -221,6 +221,7 @@
   <string name="video_conference_caller_info_name">%1$s videokonferenssipuhelu</string>
   <string name="video_crbt_title">Toisen osapuolen videon soittoääni toistetaan</string>
   <string name="voicemail">Vastaaja</string>
+  <string name="volume_boost_text">Parannettiin äänenvoimakkuutta onnistuneesti</string>
   <string name="wait_prompt_str">"Lähetäänkö seuraavat äänet?
 "</string>
   <string name="waiting_close_airplane_mode">Odota hetki…</string>
