--- a/Finnish/main/Music.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Music.apk/res/values-fi-rFI/strings.xml
@@ -712,10 +712,12 @@ Ole onnellinen"</string>
   <string name="toast_download_error_by_not_login">Kirjaudu Mi Tilille ja yritä uudelleen.</string>
   <string name="toast_download_error_by_vip_required">Hanki Premium-tason Kappalepaketti ladataksesi tämän kappaleen.</string>
   <string name="toast_download_in_process">Lataus kesken</string>
+  <string name="toast_is_pro">Olet jo PRO-jäsen.</string>
   <string name="toast_new_playlist_name_no_enter">Uutta kappaletta ei voi aloittaa</string>
   <string name="toast_new_playlist_name_too_long">Soittolistan nimi on liian pitkä</string>
   <string name="toast_normal_songs_for_download">Latauksen laatu asetettu normaalille</string>
   <string name="toast_normal_songs_for_stream">Suoratoiston laatu asetettu normaalille</string>
+  <string name="toast_not_pro">Tämä ominaisuus on käytettävissä vain PRO-jäsenillä.</string>
   <string name="toast_uhd_songs_for_download">Latauksen laatu asetettu korkealle</string>
   <string name="toast_uhd_songs_for_stream">Suoratoiston laatu asetettu korkealle</string>
   <string name="ultra_high_quality">Korkein</string>
